Keyboard support added, need to fix overflow of the result screen

--- a/styles2.css
+++ b/styles2.css
@@ -1,57 +1,17 @@
-/* * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.container {
-  margin: 100px auto;
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-.button {
-  padding: 12px;
-  width: 80px;
-  height: 80px;
-}
-.button-container {
-  margin-top: 12px;
-}
-
-.small-display {
-  padding: 10px;
-  height: 40px;
-}
-.result-display {
-  padding: 10px;
-  height: 80px;
-  font-size: 32px;
-}
-.output {
-  text-align: right;
-  border: 1px solid black;
-  display: flex;
-  justify-content: end;
-  align-items: center;
-} */
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: poppins;
 }
 
 .container {
   display: grid;
   margin: 100px auto;
   width: 320px;
-  /* border: 1px solid black; */
-  /* border-radius: 12px; */
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.2fr 0.6fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 0px 0px;
+  grid-template-rows: 0.2fr 0.6fr 0.8fr 0.8fr 0.8fr 0.8fr 0.8fr;
+  /* gap: 0px 0px; */
   grid-auto-flow: row;
   grid-template-areas:
     "display-small display-small display-small display-small"
@@ -65,33 +25,73 @@
 
 .button {
   width: 80px;
-  height: 80px;
-  border: 1px solid black;
+  height: 70px;
+  font-size: 24px;
 
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.button:hover {
+  cursor: default;
+}
+
+.number {
+  background-color: #457b9d;
+  color: #f1faee;
+  border-top: 1px solid #15252f;
+  border-right: 1px solid #15252f;
+}
+
+.top-elem {
+  background-color: #30566e;
+  color: #f1faee;
+}
+.operand {
+  /* background-color: #30566e; */
+  background-color: #ee6c4d;
+  color: #f1faee;
+}
+
 .small-display {
   grid-area: display-small;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   height: 40px;
   text-align: right;
   padding: 8px;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
+  background-color: #1c313f;
+  color: #f1faee;
 }
 
 .result-display {
   grid-area: display-result;
-  border: 1px solid rgb(238, 18, 18);
+  /* border-top: 1px solid #f1faee; */
+  border-top: 1px solid #839aa8;
   height: 80px;
   display: flex;
   justify-content: end;
   align-items: center;
   padding: 8px;
-  font-size: 32px;
+  font-size: 36px;
+  background-color: #1c313f;
+  color: #f1faee;
+  overflow: scroll;
+}
+.result-display-overflow {
+  font-size: 22px;
+  grid-area: display-result;
+  border-top: 1px solid #839aa8;
+  height: 80px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 8px;
+  background-color: #1c313f;
+  color: #f1faee;
+  overflow: scroll;
 }
 
 .zero {
@@ -108,23 +108,28 @@
 }
 .percent {
   grid-area: percent;
+  border-right: 1px solid #15252f;
 }
 
 .equals {
   grid-area: equals;
   border-bottom-right-radius: 12px;
+  border-top: 1px solid #15252f;
 }
 
 .add {
   grid-area: add;
+  border-top: 1px solid #15252f;
 }
 
 .subtract {
   grid-area: subtract;
+  border-top: 1px solid #15252f;
 }
 
 .multiply {
   grid-area: multiply;
+  border-top: 1px solid #15252f;
 }
 
 .divide {
@@ -169,8 +174,10 @@
 
 .AC {
   grid-area: AC;
+  border-right: 1px solid #15252f;
 }
 
 .C {
   grid-area: C;
+  border-right: 1px solid #15252f;
 }
